# tr-plugin-icecast

./: CMakeLists.txt  README.md  config.example.json  icecast-config.sh
.github/workflows/: build.yml
src/codec/: mp3_encoder.cc  mp3_encoder.h  resampler.cc  resampler.h
src/pipeline/: call_state.cc  call_state.h  ring_buffer.h
src/plugin/: config.cc  config.h  icecast_bridge_plugin.cc
src/transport/: icecast_pool.cc  icecast_pool.h  icecast_session.cc  icecast_session.h
